third_party/move/move-compiler-v2/tests/ability-check/typing/ignore_inferred_resource2.exp

Diagnostics:
error: unable to infer instantiation of type `S<_1>` (consider providing type arguments or annotating the type)
  ┌─ tests/ability-check/typing/ignore_inferred_resource2.move:4:9
  │
4 │         S{};
  │         ^^^
